# pico2-rtos-mpu

./: CMakeLists.txt  README.md
Fusion/: CMakeLists.txt
main/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOS_Kernel_import.cmake  main.c
